--- a/styles/sass/abstract/_variables.scss
+++ b/styles/sass/abstract/_variables.scss
@@ -35,3 +35,5 @@ $sign-main-color: #065fd4;
 $gray-background-color: rgba(0, 0, 0, 0.06);
 $timeline-hover-background-color: rgba(6, 95, 212, 0.2);
 $timeline-disabled-circle-color: #ccc;
+
+$checkmark-color: #007800;
