--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -820,6 +820,8 @@
                             top: 50%;
                             left: 75%;
                             transform: translate(-50%, -50%);
+                            cursor: pointer;
+                            border: none;
 
                             &.back {
                                 background-color: white;
