--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -850,9 +850,10 @@ footer {
       .create-page .create-section .create-box .mid {
         text-align: center;
         position: relative;
-        height: 850px; }
-        .create-page .create-section .create-box .mid form {
-          height: 100%; }
+        height: 850px;
+        /* form {
+                    height: 100%;
+                } */ }
         .create-page .create-section .create-box .mid #error {
           margin-top: 5px;
           margin-bottom: 5px;
