--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -163,9 +163,9 @@
                 position: relative;
                 height: 850px;
 
-                form {
+               /* form {
                     height: 100%;
-                }
+                } */
                 #error {
                     margin-top: 5px;
                     margin-bottom: 5px;
