--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -383,7 +383,7 @@
                                     top: 80%;
                                     font-size: 12px;
                                 }
-                                input {
+                                textarea {
                                     padding-left: 2.5%;
                                     padding-right: 2.5%;
                                     width: 95%;
@@ -392,6 +392,7 @@
                                     border-radius: 5px;
                                     border: 1px solid $darker-main-border-color;
                                     font-size: 15px;
+                                    font-family: $main-font-family;
                                     
                                     &:hover {
                                         border-color: $third-font-color;
@@ -417,7 +418,7 @@
                                     p {
                                         top: 90%;
                                     }
-                                    input {
+                                    textarea {
                                         padding-bottom: 120px;
                                     }
                                 }
