--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -472,6 +472,45 @@
                                     z-index: 2;
                                     color: $secondary-font-color;
                                 }
+                                #thumbnail-image {
+                                    width: 127px;
+                                    height: 68px;
+                                    border: 2px solid $main-font-color;
+                                    border-radius: 2px;
+
+                                    &:hover {
+                                        cursor: pointer;
+
+                                        &~.menu-icon {
+                                            display: block;
+                                        }
+                                    }
+                                }
+                                .menu-icon {
+                                    display: none;
+                                    position: absolute;
+                                    width: 30px;
+                                    height: 30px;
+                                    border-radius: 50%;
+                                    top: 65%;
+                                    left: 20%;
+                                    transform: translate(-50%, -50%);
+                                    background-color: black;
+                                    opacity: 0.7;
+
+                                    &:hover {
+                                        i {
+                                            color: white;
+                                        }
+                                    }
+                                    i {
+                                        color: $disabled-font-color;
+                                        position: absolute;
+                                        top: 50%;
+                                        left: 50%;
+                                        transform: translate(-50%, -50%);
+                                    }
+                                }
                             }
                             .playlists {
                                 margin-bottom: 24px;
